<?xml version="1.0"?>

<package format="3">

  <name>jo_navigation</name>
  <version>1.0.13</version>
  <description>Jo Navigation Package</description>

  <license>BSD-3</license>

  <maintainer email="michele.lisi@phd.unipi.it">Michele Lisi</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>jo_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_msgs</depend>
  <depend>pluginlib</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
